--- a/src/css/search-style.css
+++ b/src/css/search-style.css
@@ -56,9 +56,10 @@ body {
 .card {
   border: 1px solid #808080;
   width: 360px;
-  height: 200px;
+  /* height: 200px; */
   display: flex;
   flex-direction: column;
+  margin-bottom: 10px;
 }
 .card img {
   width: 360px;
@@ -72,6 +73,7 @@ body {
   gap: 20px;
   align-items: center;
   justify-content: center;
+  background-color: #fff;
 }
 .item-description {
   display: flex;
